fix: - wrapped Icons in button tag - Created Header.constant.ts file and moved NavLinks array - single toggle function instead of 2 separate functions

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -11,3 +11,11 @@
 .icon {
     cursor: pointer;
 }
+
+.icon-button-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: none;
+    background: none;
+}
